# GlDesktop

./: .gitignore  GlDesktop.sln  GnomeGlDesktop.sln
GlDesktop/: BuildCore.sh  GlDesktop.csproj  Program.cs
GlDesktop.Core/: CMakeLists.txt  library.cpp  library.h
GlDesktop.Core/src/x11/: X11InputHandler.cpp  X11InputHandler.h
GlDesktop.Core/src/x11/input/: Input.cpp  Input.h  InputDataExport.cpp  InputDataExport.h  XInputStructs.h
GlDesktop/data/fonts/: FontAwesomeBrandsGlyphs.json  FontAwesomeGlyphs.json
GlDesktop/src/: GlDesktop.cs
GlDesktop/src/backends/: AppBackend.cs  WindowType.cs  X11Backend.cs
GlDesktop/src/gl/: OpenGl.cs  Texture.cs
GlDesktop/src/imgui/: ImGuiColors.cs  ImGuiController.cs  ImGuiElements.cs  ImGuiGlyphs.cs  ImGuiWindow.cs
GlDesktop/src/structures/: NativeList.cs
GlDesktop/src/utils/: FileTypes.cs  LinuxFileExtensions.cs  MathUtils.cs  MemoryAllocator.cs  XLibUtils.cs
GlDesktop/src/window/: BasicWindow.cs  GlWindow.cs  GlfwWindow.Events.cs  GlfwWindow.cs  IWindowEvents.cs
GnomeGlDesktop/: BuildCore.sh  GnomeGlDesktop.csproj  Program.cs
GnomeGlDesktop/src/: GlDesktop.cs
GnomeGlDesktop/src/backends/: AppBackend.cs  WindowType.cs  X11Backend.cs
GnomeGlDesktop/src/gl/: IBO.cs  OpenGl.cs  ShaderProgram.cs  Shaders.cs  Texture.cs  VAO.cs  VBO.cs  VaoExtensions.cs
GnomeGlDesktop/src/imgui/: ImGuiColors.cs  ImGuiController.cs  ImGuiElements.cs  ImGuiGlyphs.cs  ImGuiWindow.cs
GnomeGlDesktop/src/structures/: NativeList.cs
GnomeGlDesktop/src/utils/: FileTypes.cs  LinuxFileExtensions.cs  MathUtils.cs  MemoryAllocator.cs  (+1 more)
(+90 files in other folders)
